--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Scripts/ScreenBoundsMvmnt.cs")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/asteroid_1.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/", "res://Assets/Textures/", "res://Assets/Scripts/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/player.tscn", "res://Scenes/screen_bounds_mvmnt.tscn")
-current_scene="res://Scenes/main.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/player.tscn", "res://Scenes/screen_bounds_mvmnt.tscn", "res://Scenes/asteroid_spawner.tscn", "res://Scenes/asteroid_1.tscn")
+current_scene="res://Scenes/asteroid_spawner.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=15
 
 [ScriptEditor]
 
