--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,7 @@
 [editor_metadata]
 
 executable_path="H:/Godot_v4.4.1-stable_mono_win64/Godot_v4.4.1-stable_mono_win64.exe"
+use_advanced_connections=true
 
 [dialog_bounds]
 
