--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-PackedScene=PackedStringArray("uid://b7rvb8g3t2rld", "uid://cipurhnfsh5jt")
+PackedScene=PackedStringArray("uid://du3gcn25xl7rh", "uid://b7rvb8g3t2rld", "uid://cipurhnfsh5jt")
