--- a/.gitignore
+++ b/.gitignore
@@ -709,3 +709,6 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+# Copilot indices
+.vs/ASTEROIDS-CYBERATER/CopilotIndices/
